# nstall

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile_commands.json  dev.sh  launch.json
.github/workflows/: cmake-multi-platform.yml
include/nstall/: Footer.hpp  Installer.hpp  Payload.hpp  PayloadExtractor.hpp
include/nstall/Common/: Footer.hpp  MetaInfo.hpp  Payload.hpp  Theme.hpp  Utils.hpp
include/nstall/Constructor/: Constructor.hpp  ConstructorCLI.hpp  ConstructorForm.hpp  PayloadPacker.hpp
include/nstall/Installer/: Installer.hpp  InstallerCLI.hpp  InstallerForm.hpp  PayloadExtractor.hpp
include/nstall/Shared/: Footer.hpp  Payload.hpp
src/: Installer.cpp  Main.cpp  PayloadExtractor.cpp
src/Common/: MetaInfo.cpp  Payload.cpp
src/Constructor/: ConstructorCLI.cpp  ConstructorForm.cpp  ConstructorMain.cpp  PayloadPacker.cpp
src/Consturctor/: Constructor.cpp  ConstructorForm.cpp  ConstructorMain.cpp  PayloadPacker.cpp
src/Installer/: Installer.cpp  InstallerCLI.cpp  InstallerForm.cpp  InstallerMain.cpp  PayloadExtractor.cpp
src/Shared/: Payload.cpp
tests/: CMakeLists.txt  e2e.py  e2e_small.py
